# llm-sec-playground

./: .gitignore  README.md
backend/: .env.example  manage.py  pyproject.toml
backend/scenarios/: admin.py  models.py  seed_data.py  serializers.py  urls.py  views.py
backend/scenarios/management/commands/: seed_scenarios.py
backend/scenarios/migrations/: 0001_initial.py  0002_attempt_chat_messages.py
backend/scenarios/services/: guards.py  llm_client.py  llm_simulator.py  normalizer.py  orchestrator.py  rag_sandbox.py  schema_analyzer.py  scoring.py  tool_policy.py
backend/scenarios/tests/: test_api.py  test_services.py
backend/training_range/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: client.ts  scenarios.ts
frontend/src/components/: AttemptComposer.tsx  DefenseTogglePanel.tsx  Layout.tsx  RagDocumentPanel.tsx  ReplayTimeline.tsx  RiskEventList.tsx  ScenarioCard.tsx  SchemaEditorPanel.tsx  ScoreSummary.tsx  ToolTracePanel.tsx
frontend/src/routes/: CourseHomePage.tsx  ReplayPage.tsx  ScenarioDetailPage.tsx
