[project]
name = "llm-sec-playground-backend"
version = "0.1.0"
description = "Django backend for an educational LLM security training range"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15,<4.0",
    "django-cors-headers>=4.4,<5.0",
    "openai>=1.68,<2.0",
    "python-dotenv>=1.0,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "training_range.settings"
python_files = ["test_*.py"]
